@@ -338,6 +338,12 @@
 </property>
 
 <property>
+  <name>hive.exec.parallel.thread.number</name>
+  <value>8</value>
+  <description>How many jobs at most can be executed in parallel</description>
+</property>
+
+<property>
   <name>hive.hwi.listen.host</name>
   <value>0.0.0.0</value>
   <description>This is the host address the Hive Web Interface will listen on</description>
